# compute_validation

./: .gitignore  CLAUDE.md  README.md  act-as-data-engineer-and-lexical-volcano.md  databricks.yml  main.py  pyproject.toml  requirements.txt
compute_validator/: alerts.py  cli.py  client.py  config.py  create_views.py  engine.py  fetchers.py  fetchers_system.py  rules.py  runner.py  sql_exec.py  storage.py
config/: expectations.system_tables.yaml  expectations.yaml
resources/: compute_validation.job.yml
